--- a/Data Streaming/Streaming_Notebook.ipynb
+++ b/Data Streaming/Streaming_Notebook.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMweLRJPOXHD3NrJicHdAf5",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyMweLRJPOXHD3NrJicHdAf5"
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +14,7 @@
       "name": "python"
     }
   },
+  "cells": [
     {
       "cell_type": "code",
       "execution_count": null,
